[gd_scene load_steps=39 format=3 uid="uid://cjqimvnxjqrm3"]

[ext_resource type="Texture2D" uid="uid://d1l515o3vve3s" path="res://Player/SpriteSheets/YAmILiLi - Doctor A Walk-Sheet.png" id="1"]
[ext_resource type="Texture2D" uid="uid://1faxtwcb65as" path="res://Player/Textures/shadow.png" id="2"]
[ext_resource type="Script" path="res://Player/Scripts/Player.gd" id="3"]
[ext_resource type="Script" path="res://Player/Scripts/ProjectileSingularity.gd" id="4"]
[ext_resource type="Script" path="res://Player/Scenes/Hurtbox.gd" id="5"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 0.0
height = 0.0

[sub_resource type="AnimationNodeAnimation" id="56"]
animation = &"Healing"

[sub_resource type="AnimationNodeAnimation" id="48"]
animation = &"StandDown"

[sub_resource type="AnimationNodeAnimation" id="49"]
animation = &"StandLeft"

[sub_resource type="AnimationNodeAnimation" id="50"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeAnimation" id="51"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="28"]
blend_point_0/node = SubResource("48")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("49")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("50")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("51")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1
sync = true

[sub_resource type="AnimationNodeAnimation" id="30"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeAnimation" id="31"]
animation = &"RunDown"

[sub_resource type="AnimationNodeAnimation" id="32"]
animation = &"RunRight"

[sub_resource type="AnimationNodeAnimation" id="33"]
animation = &"RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="29"]
blend_point_0/node = SubResource("30")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("31")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("32")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("33")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1
sync = true

[sub_resource type="AnimationNodeStateMachineTransition" id="34"]

[sub_resource type="AnimationNodeStateMachineTransition" id="35"]

[sub_resource type="AnimationNodeStateMachineTransition" id="57"]

[sub_resource type="AnimationNodeStateMachineTransition" id="58"]

[sub_resource type="AnimationNodeStateMachineTransition" id="59"]

[sub_resource type="AnimationNodeStateMachineTransition" id="60"]

[sub_resource type="AnimationNodeStateMachine" id="22"]
states/Healing/node = SubResource("56")
states/Healing/position = Vector2(447, 36)
states/Idle/node = SubResource("28")
states/Idle/position = Vector2(376, 120)
states/Motion/node = SubResource("29")
states/Motion/position = Vector2(522, 120)
transitions = ["Idle", "Motion", SubResource("34"), "Motion", "Idle", SubResource("35"), "Idle", "Healing", SubResource("57"), "Motion", "Healing", SubResource("58"), "Healing", "Motion", SubResource("59"), "Healing", "Idle", SubResource("60")]
graph_offset = Vector2(-79, -21)

[sub_resource type="AnimationNodeStateMachinePlayback" id="23"]

[sub_resource type="Animation" id="55"]
resource_name = "Healing"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90]
}

[sub_resource type="Animation" id="42"]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [38]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/HitboxCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HitboxCollision:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [90.0]
}

[sub_resource type="Animation" id="37"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/HitboxCollision:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [90.0]
}

[sub_resource type="Animation" id="53"]
resource_name = "StandDown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/HitboxCollision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [90.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 26)]
}

[sub_resource type="Animation" id="52"]
resource_name = "StandLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/HitboxCollision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-21, 8)]
}

[sub_resource type="Animation" id="47"]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/HitboxCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HitboxCollision:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="38"]
resource_name = "RunDown"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/HitboxCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HitboxCollision:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [90.0]
}

[sub_resource type="Animation" id="39"]
resource_name = "RunLeft"
length = 0.75
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/HitboxCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-21, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HitboxCollision:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="40"]
resource_name = "RunRight"
length = 0.75
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/HitboxCollision:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="43"]
resource_name = "RunUp"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArwenSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [38, 39, 40, 41, 42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/HitboxCollision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [90.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2pt6c"]
_data = {
"Healing": SubResource("55"),
"IdleRight": SubResource("47"),
"IdleUp": SubResource("42"),
"RESET": SubResource("37"),
"RunDown": SubResource("38"),
"RunLeft": SubResource("39"),
"RunRight": SubResource("40"),
"RunUp": SubResource("43"),
"StandDown": SubResource("53"),
"StandLeft": SubResource("52")
}

[sub_resource type="CapsuleShape2D" id="36"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="54"]
radius = 7.0
height = 16.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
position = Vector2(-2, -2)
collision_layer = 2
collision_mask = 17
script = ExtResource("3")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.592157)
position = Vector2(-1, 15)
scale = Vector2(2.24844, 2.24844)
texture = ExtResource("2")

[node name="ArwenSprite" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(1.36875, 1.36875)
texture = ExtResource("1")
hframes = 91

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 7)
shape = SubResource("1")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("22")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("23")
parameters/Idle/blend_position = Vector2(0.00252736, 0.0144104)
parameters/Motion/blend_position = Vector2(0.00758219, 0.11048)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "StandDown"
libraries = {
"": SubResource("AnimationLibrary_2pt6c")
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1, 7)
shape = SubResource("36")

[node name="InvincibilityTimer" type="Timer" parent="Hurtbox"]
wait_time = 0.5
one_shot = true

[node name="ProjectileSingularity" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 17
script = ExtResource("4")

[node name="ProjectileTimer" type="Timer" parent="ProjectileSingularity"]
wait_time = 0.5
one_shot = true

[node name="MagicRenewTimer" type="Timer" parent="ProjectileSingularity"]
wait_time = 12.0
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="AttackTimer" type="Timer" parent="Hitbox"]
wait_time = 0.8
one_shot = true

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(16, 7)
rotation = 1.5708
shape = SubResource("54")
disabled = true

[node name="HealingTimer" type="Timer" parent="."]
wait_time = 14.0
one_shot = true

[node name="SecondHealingTimer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[connection signal="area_shape_entered" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_area_shape_entered"]
